@@ -313,10 +313,10 @@ name|MatchAllDocsWeight
 implements|implements
 name|Weight
 block|{
-DECL|field|searcher
+DECL|field|similarity
 specifier|private
-name|Searcher
-name|searcher
+name|Similarity
+name|similarity
 decl_stmt|;
 DECL|field|queryWeight
 specifier|private
@@ -338,9 +338,12 @@ parameter_list|)
 block|{
 name|this
 operator|.
-name|searcher
+name|similarity
 operator|=
 name|searcher
+operator|.
+name|getSimilarity
+argument_list|()
 expr_stmt|;
 block|}
 DECL|method|toString
@@ -435,10 +438,7 @@ name|MatchAllScorer
 argument_list|(
 name|reader
 argument_list|,
-name|getSimilarity
-argument_list|(
-name|searcher
-argument_list|)
+name|similarity
 argument_list|,
 name|this
 argument_list|)
